# egui-pob

./: .gitmodules  CLAUDE.md  Cargo.toml  PLAN.md  justfile
.claude/: settings.json
docs/: asset-extraction.md
plans/: initial-plan.md  parity-plan.md
src/: lib.rs  main.rs
src/data/: build_list.rs  config.rs  items.rs  mod.rs  skills.rs  tree.rs  tree_sprites.rs
src/gui/: build_list.rs  build_view.rs  config_tab.rs  import_tab.rs  items_tab.rs  mod.rs  skills_tab.rs  theme.rs  tree_renderer.rs  tree_tab.rs
src/lua_bridge/: filesearch.rs  mod.rs  stubs.rs  system.rs
test_builds/3.28-migrage/: reliqlone.xml
tests/: boot_verification.rs  calc_verification.rs  interaction_tests.rs
tests/common/: mod.rs
